warcos-backend-microservice/KubernetesConfigs/auth-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: auth-app
    spec:
      containers:
        - name: backend-container
          image: registry.4taleproduction.com/warcos/auth-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5001
      imagePullSecrets:
      - name: gitlab-auth
  selector:
    matchLabels:
      app: auth-app
