warcos-backend-microservice/KubernetesConfigs/auth-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: auth-app
spec:
  selector:
    app: auth-app
  ports:
  - port: 5001
  clusterIP: None
